@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2005, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,7 +30,7 @@
  *
  * @run clean ThreadPoolAccTest
  * @run build ThreadPoolAccTest
- * @run main ThreadPoolAccTest
+ * @run main/othervm -Djava.security.manager=allow ThreadPoolAccTest
  */
 
 import java.security.AccessController;
